--- a/blog/_quarto.yml
+++ b/blog/_quarto.yml
@@ -2,18 +2,19 @@ project:
   type: website
 
 website:
-  title: "blog"
+  title: "Tim's Blog"
+  site-url: "https://tbeck.io/blog"
   navbar:
     right:
       - about.qmd
+      - icon: linkedin
+        text: LinkedIn
+        href: https://linkedin.com/in/tmbeck
       - icon: github
-        href: https://github.com/
+        href: https://github.com/tmbeck
       - icon: twitter
         href: https://twitter.com
 format:
   html:
     theme: cosmo
     css: styles.css
-
-
-
