--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,6 +19,8 @@ website:
 
 format:
   html:
-    theme: flatly
+    theme:
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
